<resources>
    <string name="app_name">My Application44</string>
    <string name="Destination">Select a country :</string>
    <string name="room">How many rooms?</string>
    <string name="adult">How many adults?</string>
    <string name="childern">How many childerns?</string>
    <string name="checkIn">Check-in date:</string>
    <string name="checkOut">Check-out date:</string>
    <string name="num1">1</string>
    <string name="num2">1</string>
    <string name="num3">0</string>
    <string name="apply">Search</string>
    <string name="add_button">adding</string>
    <string name="minus_button">minusing</string>
    <string name="date">save my date</string>
    <string name="welcome">Welcome</string>
    <string name="Flights">FLIGHTS</string>
    <string name="Hotels">HOTELS</string>
    <string name="Confirm">Confirm</string>
    <string name="Totalbookingprice">Flight price :</string>
    <string name="Visanumber">Visa number :</string>
    <string name="Name">Name :</string>
    <string name="CheckOut">Check-Out</string>
    <string name="email">Email :</string>
    <string-array name="country_array">
        <item>Istanbul</item>
        <item>Dubai</item>
        <item>Cairo</item>
        <item>Beirut</item>
        <item>Paris</item>
        <item>Sharm El Sheikh</item>
        <item>Hurghada</item>
        <item>Alexandria</item>
        <item>Madinah</item>
    </string-array>
    <string-array name="Cites">

        <item>Egypt</item>
        <item>Dubai</item>
        <item>Saudi Arabia</item>
        <item>America</item>
    </string-array>

    <string-array name="back">

        <item>Asia</item>
        <item>Australia</item>
        <item>India</item>
        <item>China</item>


    </string-array>

    <string-array name="Levels">

        <item>First Class</item>
        <item>Economy Class</item>
        <item>Business Class</item>
    </string-array>
    <string name="upcoming_flights">Upcoming Flights</string>
    <string name="filter">Filter</string>
    <string name="go">GO</string>
    <string name="cost1">4,304 EGP</string>
    <string name="cost2">3,202 EGP</string>
    <string name="cost3">3,948 EGP</string>
    <string name="cost4">5,021 EGP</string>
    <string name="time1">5h 25</string>
    <string name="time2">5h 15</string>
    <string name="time3">4h 45</string>
    <string name="time4">5h 50</string>
    <string name="timefrom1">09:10</string>
    <string name="timefrom2">16:35</string>
    <string name="timefrom3">06:15</string>
    <string name="timefrom4">11:00</string>
    <string name="timeto1">14:35</string>
    <string name="timeto2">21:50</string>
    <string name="timeto3">11:00</string>
    <string name="timeto4">16:50</string>
    <string name="hotels">Hotels</string>
    <string name="tolip_hotel">Tolip hotel</string>
    <string name="very">Very good</string>
    <string name="Anight980EGP">980</string>
    <string name="Book">Book</string>
    <string name="Anight">A night</string>
    <string name="EGP">EGP</string>
    <string name="regist">Rigister</string>
    <string name="alreadyregest">Already Registered!</string>
    <string name="gologin">Login</string>
    <string name="Login">Login</string>
    <string name="bookingprice">Hotel price:</string>
    <string-array name="Hotels_name">
        <item>Tolip Hotel</item>
        <item>Paradise</item>
        <item>Grand plaza</item>
        <item>Helton hotel</item>
    </string-array>
    <string-array name="Hotels_rate">
        <item>Very Good</item>
        <item>Good</item>
        <item>Good</item>
        <item>Excellent</item>
    </string-array>
    <string-array name="Hotels_price">
        <item> 580</item>
        <item> 450</item>
        <item> 540</item>
        <item> 760</item>
    </string-array>


</resources>