<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back"
            android:background="@drawable/arrow_back"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_marginRight="65dp"
        android:layout_marginLeft="65dp"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textAlignment="center"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/entercountry"
            android:text="@string/Destination"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingLeft="20dp"
            />

        <Spinner
            android:id="@+id/countryspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/country_array"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
            android:id="@+id/first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/checkIn"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ques1"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"

            />
    </LinearLayout>
        <CalendarView
            android:id="@+id/calenderview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounderrr"
            android:layout_marginLeft="10dp"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/outdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:text="@string/checkOut"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ques2"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"

                />

        </LinearLayout>
        <CalendarView
            android:id="@+id/calenderviewout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounderrr"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/ques3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/room"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:orientation="horizontal"

        >
        <ImageButton
            android:id="@+id/add1"
            android:background="@drawable/ic_baseline_add_circle_outline_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:contentDescription="@string/add_button"
            android:onClick="counter1"
            />
        <TextView
            android:id="@+id/ques6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="28dp"
            android:textStyle="normal"
            />
        <ImageButton
            android:id="@+id/sub1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_remove_circle_outline_24"
            android:padding="30dp"
            android:contentDescription="@string/minus_button"
            android:onClick="counter1"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/ques4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/adult"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/add2"
            android:background="@drawable/ic_baseline_add_circle_outline_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:contentDescription="@string/add_button"
            android:onClick="counter2"
            />

        <TextView
            android:id="@+id/ques7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/num2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28dp"
            android:textStyle="normal"

            />

        <ImageButton
            android:id="@+id/sub2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_remove_circle_outline_24"
            android:padding="30dp"
            android:contentDescription="@string/minus_button"
            android:onClick="counter2"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/ques5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/childern"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
 />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/add3"
            android:background="@drawable/ic_baseline_add_circle_outline_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:contentDescription="@string/add_button"
            android:onClick="counter3"
            />

        <TextView
            android:id="@+id/ques8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/num3"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28dp"
            android:textStyle="normal"
            />

        <ImageButton
            android:id="@+id/sub3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_remove_circle_outline_24"
            android:padding="30dp"
            android:contentDescription="@string/minus_button"
            android:onClick="counter3"
            />
    </LinearLayout>
    <Button
        android:id="@+id/apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:padding="15dp"
        android:background="@drawable/roundbouton"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="30dp"
        />

</LinearLayout>
</ScrollView>