<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/booking"
    >



    <ImageButton
        android:id="@+id/i1"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/_2"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/nan1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/image11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/nan1"
            android:paddingLeft="10dp"
            android:text="@string/tolip_hotel"
            android:textColor="@color/white"
            android:textSize="35dp"
            android:textStyle="bold"

            tools:ignore="TextContrastCheck,TextContrastCheck" />


        <ImageView
            android:id="@+id/star1"
            android:layout_marginStart="115dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src= "@drawable/star1"
            />
        <ImageView
            android:id="@+id/star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src= "@drawable/star1"
            />
        <ImageView
            android:id="@+id/star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src= "@drawable/star1"
            />
        <ImageView
            android:id="@+id/star4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src= "@drawable/star1"
            />


    </LinearLayout>




    <TextView
        android:id="@+id/text22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/nan1"
        android:text="@string/very"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/nan1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text2222"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="115dp"
            android:text="@string/Anight"
            android:textColor="@color/white"
            android:textSize="25dp" />
        <TextView
            android:id="@+id/text222"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/Anight980EGP"
            android:textColor="@color/white"
            android:textSize="25dp" />
        <TextView
            android:id="@+id/text22222"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="5dp"
            android:text="@string/EGP"
            android:textColor="@color/white"
            android:textSize="25dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/reunddown"
        >

        <Button
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_marginRight="80dp"
            android:layout_marginLeft="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/book"
            android:textSize="25dp"
            android:text="@string/Book"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textStyle="bold"
            android:background="@drawable/roundbouton"

            />
    </LinearLayout>
</LinearLayout>


