
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LogOut"
        android:background="@color/grey"
        >
            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/CheckOut"
                android:textSize="40dp"
                android:textStyle="bold"
                android:textColor="@color/nan1" />
        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/fst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Name"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:paddingLeft="20dp"
                    />

                <EditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:layout_marginRight="40dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:id="@+id/sec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:paddingLeft="20dp"
                    />

                <EditText
                    android:id="@+id/txtemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:layout_marginRight="40dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:id="@+id/secTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Visanumber"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:paddingLeft="20dp"
                    />

                <EditText
                    android:id="@+id/secTxt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:layout_marginRight="40dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:id="@+id/cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Totalbookingprice"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:paddingLeft="20dp"
                    />

                <TextView
                    android:id="@+id/showcost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40dp"
                    android:textStyle="normal"
                    android:textColor="@color/red"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:id="@+id/cost2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bookingprice"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:paddingLeft="20dp"
                    />

                <TextView
                    android:id="@+id/showcost2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40dp"
                    android:textStyle="normal"
                    android:textColor="@color/red"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Confirm"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:padding="15dp"
                android:textAlignment="center"
                android:background="@drawable/roundbouton"
                android:layout_marginRight="65dp"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="12dp"

                />

        </LinearLayout>
    </LinearLayout>
